2019-12-04
-added qc for gene aliases that are the same as gene symbols/names
 (such redundant aliases are deleted and logged into deleted_aliases.log)

2019-10-17
-added qc for related qtls missing reference associations

v.1.2.7, 2019-05-13
-inactive objects QC: added reporting of active qtls with inactive markers

v.1.2.6, 2019-04-18
-annotation QC: added reporting of annotations with inactive references

v.1.2.5, 2019-01-28
-fixed logging

v.1.2.4, 2019-01-08
-annotation QC: added reporting of CC manual annotations that have invalid MMO: ids

v.1.2.3, 2018-12-07
-annotation QC: added reporting and removal of obsolete ND annotations for GO ontology, per RGDD-1529

v.1.2.2, 2018-12-05
-ontology QC: added checking if 'RGD ID:' synonyms for RS ontology are properly formatted

v.1.2.1, 2018-11-12
-sequence QC: added listing of protein rgd ids having multiple sequences of type 'uniprot_seq'

v.1.2, 2018-11-06
-refactored sequence QC: now shows count of orphaned sequences

v.1.1, 2018-10-16
-added fixing of annotations with new lines in notes

v 1.0, 2017-07-20
-initial version of the pipeline: QC of dangling sequence objects