@@ -2,6 +2,6 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.QC">
-        <property name="version" value="--Data QC pipeline   -- build Dec 04, 2019 --" />
+        <property name="version" value="--Data QC pipeline   -- build Jan 27, 2020 --" />
     </bean>
 </beans>
